@@ -6,4 +6,5 @@ Contributors (from the git history):
   Artem Krivopolenov <akrivopolenov@gmail.com>
   Fernando Vezzosi <buccia@repnz.net>
   ryoi432 (UTF-8 fix)
+  Slaven Rezić / eserte (rate limit handling suggestion)
 
