@@ -3,15 +3,28 @@ use warnings;
 
 use Test::More;
 
-use_ok('WWW::Tumblr');
-use_ok('WWW::Tumblr::Test');
+# Must load these first to check skip conditions
+use WWW::Tumblr;
+use WWW::Tumblr::Test;
+
+# Check if we should skip posting tests entirely
+if (my $reason = WWW::Tumblr::Test::skip_posting_tests()) {
+    plan skip_all => $reason;
+}
 
 my $user = WWW::Tumblr::Test::user();
 
 my $unfollow = $user->unfollow( url => 'staff.tumblr.com' );
 
-ok $unfollow,                       'user unfollow is fine';
+if ($unfollow) {
+    pass('user unfollow is fine');
+} else {
+    if ($user->error && WWW::Tumblr::Test::check_rate_limit($user->error)) {
+        SKIP: { skip "Rate limit exceeded", 1; }
+    } else {
+        fail('user unfollow is fine');
+        diag("Error: " . join(', ', @{$user->error->reasons || ['Unknown']}));
+    }
+}
 
 done_testing();
-
-
